# Autonomous-Anomaly-Detection-and-Response-Platform

./: .dockerignore  .env.example  .gitignore  LICENSE.md  MASTER_LOGIC_FLOW.md  README.md  USAGE_MAKEFILE.md  check_data.py  compose.yaml  makefile  pyproject.toml  team_protocols.txt
animations/: main.py
config/: __init__.py  config.py
dags/: batch_feature_pipeline_dag.py  config.yaml  dag.py
data/: create_synthetic_sdv.py  prepare_data.py  synthetic_data_sdv.parquet  test.ipynb  test_data_3.csv
data/create_datasets/: __init__.py  create_parquet_datasets.py
data/registry/: registry.db
data/synthetic_data_creation/: __init__.py  create_synthetic_sdv.py  test_data.csv
ex_ariflow/: ex1.py
logs/: Progetto-Finale-Master-AI-2025-2026 - Shortcut.lnk
model/: __init__.py  train.py
models/: preprocessor.joblib
qdrant_data/: raft_state.json
rag_files/: machine_1.txt  machine_2.txt  machine_3.txt
services/: dockerfile.spark_services
services/airflow_service/: Dockerfile  README.MD  README.md
services/batch_pipeline_service/: README.md
services/batch_pipeline_service/config/: __init__.py  config.py
services/batch_pipeline_service/src/: batch_pipeline.py  config.yaml  connfig.yaml
services/create_datasets_service/: README.md
services/create_datasets_service/src/: example_usage.py  industrial_washer_generator.py
services/data_engineering_service/: README.md
services/data_engineering_service/config/: feature_engineering_config.yaml
services/data_engineering_service/src/: data_engineering.py
services/feature_loader_service/: dockerfile
services/feature_loader_service/src/: loader.py
services/feature_store_service/: Feast_API_Tests.postman_collection.json  README.md  dockerfile  pyproject.toml
services/feature_store_service/config/: feature_store.yaml
services/feature_store_service/src/: __init__.py  create_files.py  data_sources.py  entity.py  feature_services.py  feature_store.yaml  features.py  test_functionality.py
services/feature_store_src/feature_store/: dockerfile
services/feature_store_src/feature_store/config/: feature_store.yaml
services/feature_store_src/feature_store/src/: feature_definitions.py  feature_services.py  features.py
services/feature_store_src/feature_store_service/: dockerfile
services/historical_ingestion_service/: README.md  dockerfile
services/historical_ingestion_service/config/: __init__.py  config.py
services/historical_ingestion_service/src/: README.md  __init__.py  dataloader.py  feature_engineering.py  generate_preprocessor.py  hist_feature_engineering.py  hist_ingestion_app.py  run_service.py
services/if_anomaly_service/: Dockerfile
services/if_anomaly_service/config/: config.py
services/if_anomaly_service/src/: anomaly_consumer.py  fakeproducer.py
services/inference_service/: README.md  dockerfile
services/inference_service/config/: config.py
services/inference_service/src/: app.py  preprocessor.py
services/ingestion_rag_service/: Dockerfile
services/ingestion_rag_service/config/: __init__.py  config.py
services/ingestion_rag_service/src/: ingestion.py
services/ingestion_service/config/: config.py
services/ingestion_service/src/: app.py  feature_engineering.py  in_feature_engineering.py  ingestion.py
services/ingestion_service/src/queue/: producer.py
services/langchain_service/: Dockerfile  README.md
services/langchain_service/config/: __init__.py  config.py
services/langchain_service/src/: __init__.py  agent.py  app.py  main.py  tools.py
services/mcp_server_service/: Dockerfile  README.md  server.py
services/mcp_server_service/config/: config.py  config.yaml
services/mcp_server_service/mongo_logger/config/: config.py
services/mcp_server_service/mongo_logger/src/: __init__.py  logs.py
services/mcp_server_service/mongodb/src/: __init__.py  logs.py
services/mcp_server_service/qdrant/config/: __init__.py  config.py  qdrant_config.yaml
services/mcp_server_service/qdrant/src/: __init__.py  retrieve.py
services/mcp_server_service/src/: embeddings.py  retriever.py  server.py
services/mlflow/: Dockerfile  README.md
services/mlflow_service/: Dockerfile
services/monitoring_service/: monitoring_drift_check.py
services/producer_service/: dockerfile
services/producer_service/config/: config.py
services/producer_service/src/: producer.py
services/qdrant_service/: Dockerfile  README.md
services/redis_service/: README.md
services/redis_service/config/: redis.conf
services/redis_service/data/: dump.rdb
services/retraining_service/: Dockerfile  README.md
services/retraining_service/config/: settings.py
services/retraining_service/src/: config.py  evaluator.py  load_from_datalake.py  retrain.py  train.py  utils.py
services/streaming_service/: README.md  dockerfile
services/streaming_service/config/: config.py
services/streaming_service/src/: app.py  preprocessor.py
services/streaming_service/src/queue/: __init__.py  consumer.py
services/training_pipeline_service/src/: model.py  train copy.py
services/training_service/: README.md  dockerfile
services/training_service/config/: __init__.py  config.py  settings.py
services/training_service/metrics/: training_metrics.json
services/training_service/src/: __init__.py  dataloader.py  evaluation_model.py  evaluator.py  feature_engineering.py  generate_preprocessor.py  load_from_feast.py  metrics.py  model.py  preprocessor.py  train.py  utils.py  validation.py
services/vllm_service/: README.md
src/: feature_engineering.py
src/queue/: producer.py
utils/: create_offline_files.py
utils/cold_start_util/: Dockerfile  cold_start.py  main.py  pyproject.toml
utils/offline_files_util/: Dockerfile  main.py  pyproject.toml
