[project]
name = "Washing-Machines-Anomaly-Detection"
version = "0.1.0"
description = "Microservices architecture"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
]

[dependency-groups]

ingestion = [
    "quixstreams>=3.0.0",
    "confluent-kafka>=2.4,<2.12",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "numpy>=2.4.1",
    "pandas>=2.2.0",
    "joblib>=1.4.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pyarrow>=19.0.0",
]


data-engineering = [
    "pyspark>=4.1.1",
    "pyyaml>=6.0.3",
]

training_ml = [
    "numpy>=2.4.1",
    "pyarrow>=19.0.1",
    "scikit-learn>=1.8.0",
    "pandas>=2.2.0",
    "joblib>=1.4.0",
    "mlflow>=2.10.0",
]
feature-store = [
    "feast[redis,duckdb]>=0.58.0",
]
feature_store_apply = [
    "feast[redis,duckdb]>=0.58.0",
]
dataset-creation-2 = [
    "scikit-learn>=1.8.0",
    "sdv>=1.33.0",
]
dataset-creation = [
    "pyspark>=4.1.1",
]
spark-services = [
    "pyspark>=4.1.1",
    "pyyaml>=6.0.3",
]
data-offline = [
    "pyarrow>=19.0.1",
]
training-pipeline = [
    "feast[redis,duckdb]>=0.58.0",
    "mlflow>=3.9.0",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "pydantic-settings>=2.11.0",
    "scikit-learn>=1.8.0",
]
mlflow = [
    "mlflow>=3.9.0",
]
streaming = [
    "quixstreams>=3.0.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.5.0",
    "joblib>=1.4.0",
    "feast[redis]>=0.58.0",
    "python-dotenv>=1.0.0",
]

mlflow-server = [
    "mlflow>=2.10.0",
    "boto3>=1.34.0",
    "psycopg2-binary>=2.9.0", 
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
